overflow x issue has now been resolved also the font size is more appropriate for mobile devices

--- a/fureverfriends/static/css/style.css
+++ b/fureverfriends/static/css/style.css
@@ -2,7 +2,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
    
+}
+
+html{
+    overflow-x: hidden;
+}
+
+body{
+    overflow-x: hidden;
 }
 
 .container {
@@ -105,8 +114,7 @@
 }
 
 .welcome-info {
-    margin-left: 3%;
-    margin-right: 3%;
+    text-align: center;
     padding: 10px;
 }
 
@@ -149,8 +157,7 @@
 }
 
 .mission-info {
-    margin-left: 3%;
-    margin-right: 3%;
+    text-align: center;
     padding: 10px;
 }
 
@@ -170,18 +177,21 @@
     width: 100%;
     height: 400px;
     object-fit: cover;
+    overflow: hidden;
 }
 
 .hedgehog-image {
     width: 100%;
     height: 400px;
     object-fit: cover;
+    overflow: hidden;
 }
 
 .squirell-banner {
     width: 100%;
     height: 400px;
     object-fit: cover;
+    overflow: hidden;
 }
 
 .checklist-title-container {
